Descarga del dataset mnist

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -3,34 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0531a54-4b1b-4d84-928b-8f91d6206d04",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c062618b-3d44-464c-bbdd-378140fb1ecb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f7024890-c445-4baf-ba75-817ee0498979",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Set-ExecutionPolicy -Scope Process -ExecutionPolicy RemoteSigned\n",
+    "#Get-ExecutionPolicy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ed2cd4d1-c65d-411e-859e-192428ddd637",
+   "execution_count": 2,
+   "id": "c062618b-3d44-464c-bbdd-378140fb1ecb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from tensorflow.keras.datasets import mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed2cd4d1-c65d-411e-859e-192428ddd637",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'keras.api.datasets.mnist' has no attribute 'load'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m (x_train,y_train),(x_test,y_test)\u001b[38;5;241m=\u001b[39mmnist\u001b[38;5;241m.\u001b[39mload()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mForma de los arrays x: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx_train\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mForma de los arrays y: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_train\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'keras.api.datasets.mnist' has no attribute 'load'"
+     ]
+    }
+   ],
+   "source": [
+    "(x_train,y_train),(x_test,y_test)=mnist.load()\n",
+    "print(f\"Forma de los arrays x: {x_train.shape}\")\n",
+    "print(f\"Forma de los arrays y: {y_train.shape}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -84,6 +98,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12d4a4f5-0715-4db4-ba90-c4eb8d0b95ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb8c5651-b1e7-4843-a479-fa024519795c",
    "metadata": {},
    "outputs": [],
    "source": []
