Limpieza de los datos de entrenamiento

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -13,46 +13,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "c062618b-3d44-464c-bbdd-378140fb1ecb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from tensorflow.keras.datasets import mnist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ed2cd4d1-c65d-411e-859e-192428ddd637",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'keras.api.datasets.mnist' has no attribute 'load'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m (x_train,y_train),(x_test,y_test)\u001b[38;5;241m=\u001b[39mmnist\u001b[38;5;241m.\u001b[39mload()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mForma de los arrays x: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx_train\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mForma de los arrays y: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_train\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'keras.api.datasets.mnist' has no attribute 'load'"
-     ]
-    }
-   ],
-   "source": [
-    "(x_train,y_train),(x_test,y_test)=mnist.load()\n",
-    "print(f\"Forma de los arrays x: {x_train.shape}\")\n",
-    "print(f\"Forma de los arrays y: {y_train.shape}\")"
+    "import numpy as np\n",
+    "from tensorflow.keras.datasets import mnist\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layer import Dense,Flatten"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea19bc97-09d9-4593-abce-fa68fb8065cf",
+   "id": "ed2cd4d1-c65d-411e-859e-192428ddd637",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(x_train,y_train),(x_test,y_test)=mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ea19bc97-09d9-4593-abce-fa68fb8065cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forma de los arrays x: (60000, 28, 28)\n",
+      "Forma de los arrays y: (60000,)\n",
+      "Forma de los arrays x: (10000, 28, 28)\n",
+      "Forma de los arrays y: (10000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Entrenamiento\n",
+    "print(f\"Forma de los arrays x: {x_train.shape}\") # (60000, 28, 28)\n",
+    "print(f\"Forma de los arrays y: {y_train.shape}\") # (60000,)\n",
+    "\n",
+    "#Pruebas\n",
+    "print(f\"Forma de los arrays x: {x_test.shape}\") # (10000, 28, 28)\n",
+    "print(f\"Forma de los arrays y: {y_test.shape}\") # (10000,)"
+   ]
   },
   {
    "cell_type": "code",
@@ -60,7 +68,11 @@
    "id": "f06a3fa0-3e50-41e7-a018-84605a1d97bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Normalizar datos\n",
+    "x_train = x_train/255.0\n",
+    "x_test = x_test/255.0"
+   ]
   },
   {
    "cell_type": "code",
