Creacion del modelo, Compilacion y Entrenamiento

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "c062618b-3d44-464c-bbdd-378140fb1ecb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "import numpy as np\n",
     "from tensorflow.keras.datasets import mnist\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layer import Dense,Flatten"
+    "from tensorflow.keras.layers import Dense,Flatten"
    ]
   },
   {
@@ -80,7 +80,29 @@
    "id": "f3007360-1820-45aa-ac78-717a775a0c89",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Creacion del modelo\n",
+    "modelo = Sequential([\n",
+    "    Flatten(input_shape(28,28)),\n",
+    "    Dense(128, activation = \"relu\")\n",
+    "    Dense(10, activation = \"softmax\")\n",
+    "])\n",
+    "\n",
+    "#Compilamos el modelo\n",
+    "\n",
+    "modelo = compile(\n",
+    "    optimizer = \"adam\",\n",
+    "     loss='sparse_categorical_crossentropy',\n",
+    "    metrics = [\"accuracy\"]\n",
+    ")\n",
+    "\n",
+    "#Entrenamiento de el modelo\n",
+    "modelo = fit(x_train,y_train,epochs = 5)\n",
+    "\n",
+    "#evaluar el modelo\n",
+    "\n",
+    "test_loss, text_acc =\n"
+   ]
   },
   {
    "cell_type": "code",
