Evaluacion del modelo

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -97,11 +97,7 @@
     ")\n",
     "\n",
     "#Entrenamiento de el modelo\n",
-    "modelo = fit(x_train,y_train,epochs = 5)\n",
-    "\n",
-    "#evaluar el modelo\n",
-    "\n",
-    "test_loss, text_acc =\n"
+    "modelo = fit(x_train,y_train,epochs = 5)\n"
    ]
   },
   {
@@ -110,7 +106,12 @@
    "id": "8c6babb2-1e34-4005-b45b-3f022ef0bf52",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#evaluar el modelo\n",
+    "\n",
+    "test_loss, test_acc = modelo.evaluate(x_test,y_test)\n",
+    "print(f\"Test accuracy {test_acc}\")"
+   ]
   },
   {
    "cell_type": "code",
