Arreglados unos errores de sintaxis

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "c062618b-3d44-464c-bbdd-378140fb1ecb",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ed2cd4d1-c65d-411e-859e-192428ddd637",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "ea19bc97-09d9-4593-abce-fa68fb8065cf",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f06a3fa0-3e50-41e7-a018-84605a1d97bc",
    "metadata": {},
    "outputs": [],
@@ -76,36 +76,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f3007360-1820-45aa-ac78-717a775a0c89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8750 - loss: 0.4395\n",
+      "Epoch 2/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - accuracy: 0.9643 - loss: 0.1252\n",
+      "Epoch 3/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - accuracy: 0.9769 - loss: 0.0772\n",
+      "Epoch 4/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - accuracy: 0.9824 - loss: 0.0559\n",
+      "Epoch 5/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - accuracy: 0.9865 - loss: 0.0419\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x275b082af50>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Creacion del modelo\n",
     "modelo = Sequential([\n",
-    "    Flatten(input_shape(28,28)),\n",
-    "    Dense(128, activation = \"relu\")\n",
+    "    Flatten(input_shape=(28,28)),\n",
+    "    Dense(128, activation = \"relu\"),\n",
     "    Dense(10, activation = \"softmax\")\n",
     "])\n",
     "\n",
     "#Compilamos el modelo\n",
     "\n",
-    "modelo = compile(\n",
+    "modelo.compile(\n",
     "    optimizer = \"adam\",\n",
-    "     loss='sparse_categorical_crossentropy',\n",
+    "    loss='sparse_categorical_crossentropy',\n",
     "    metrics = [\"accuracy\"]\n",
     ")\n",
     "\n",
     "#Entrenamiento de el modelo\n",
-    "modelo = fit(x_train,y_train,epochs = 5)\n"
+    "modelo.fit(x_train,y_train,epochs = 5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8c6babb2-1e34-4005-b45b-3f022ef0bf52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 619us/step - accuracy: 0.9717 - loss: 0.0970\n",
+      "Test accuracy 0.9758999943733215\n"
+     ]
+    }
+   ],
    "source": [
     "#evaluar el modelo\n",
     "\n",
